--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Mexant Template - Contact page</title>
+    <title>Medicuslegal Services - Contact page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,13 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io\apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io\favicon-16x16.png">
+    <link rel="manifest" href="favicon_io\site.webmanifest">
+
 <!--
 
 TemplateMo 574 Mexant
@@ -40,7 +47,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/logo.png" alt="">
+                          <img src="assets\images\Medicuslegal_logo.jpg" style="height: 80px; width: auto;" alt="Medicuslegal_logo">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -90,7 +97,7 @@ https://templatemo.com/tm-574-mexant
       <div class="row">
         <div class="col-lg-12">
           <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2791.78997548554!2d144.9805125252687!3d-37.84132841005892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6681f3e9cb7e1%3A0x9d52778f56cab5a8!2sFawkner%20Park!5e1!3m2!1sen!2sth!4v1648201596364!5m2!1sen!2sth" width="100%" height="450px" frameborder="0" style="border:0; border-radius: 5px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3561.3841400496344!2d80.90433117543543!3d26.795894576717025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDQ3JzQ1LjIiTiA4MMKwNTQnMjQuOSJF!5e0!3m2!1sen!2sin!4v1748162024497!5m2!1sen!2sin" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
         <div class="col-lg-10 offset-lg-1">
@@ -99,21 +106,24 @@ https://templatemo.com/tm-574-mexant
               <div class="info-item">
                 <i class="fa fa-envelope"></i>
                 <h4>Email Address</h4>
-                <a href="#">info@company.com</a>
+                <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
+
               </div>
             </div>
             <div class="col-lg-4">
               <div class="info-item">
                 <i class="fa fa-phone"></i>
                 <h4>Phone Number</h4>
-                <a href="#">010-020-0340</a>
+                <a href="tel:8299869572">8299869572</a>
+
               </div>
             </div>
             <div class="col-lg-4">
               <div class="info-item">
                 <i class="fa fa-map-marked-alt"></i>
                 <h4>Address</h4>
-                <a href="#">Victoria, Australia</a>
+                <a href="#">Address- Shop no B-69 anpurna complex sector-H,LDA colony Kanpur road Lucknow 226012
+</a>
               </div>
             </div>
           </div>
@@ -122,7 +132,7 @@ https://templatemo.com/tm-574-mexant
     </div>
   </section>
 
-  <section class="contact-us-form">
+  <!-- <section class="contact-us-form">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -169,9 +179,9 @@ https://templatemo.com/tm-574-mexant
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <section class="partners">
+  <!-- <section class="partners">
     <div class="container">
       <div class="row">
         <div class="col-lg-2 col-sm-4 col-6">
@@ -206,19 +216,50 @@ https://templatemo.com/tm-574-mexant
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2022 Mexant Co., Ltd. All Rights Reserved. 
-          
-          <br>Designed by <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-        </div>
+  <footer >
+  <div class="container">
+    <div class="row text-center text-lg-start align-items-center mb-4">
+      <!-- Logo -->
+      <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
+  <img src="assets\images\Medicuslegal_logo.jpg" alt="MedicusLegal Logo" style="max-width: 150px;">
+  <p style="margin-top: 10px; font-style: italic; font-size: 14px; color: #e0d2d2;">
+    Protect your Profession<br>Preserve your legacy
+  </p>
+</div>
+
+      <!-- Address & Contact -->
+      <div class="col-lg-5 mb-3 mb-lg-0">
+        <p style="margin: 0;">
+          MedicusLegal Services Pvt Ltd<br>
+          Address- Shop no B-69 anpurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
+            <i class="fas fa-phone-alt"></i> 8299869572
+          </a>
+        </p>
+      </div>
+
+      <!-- Social Media -->
+      <div class="col-lg-4">
+        <p>Follow us:</p>
+        <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" style="color: #e0dcdc"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
-  </footer>
+
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <p style="margin-bottom: 0;">
+          © 2025 MedicusLegal Services Pvt Ltd. All Rights Reserved. <br>
+          Built by <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">Harsh</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
