--- a/index.html
+++ b/index.html
@@ -553,7 +553,49 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       </div>
     </div>
   </section>
+<section class="partners-section">
+  <style>
+     .partners-section {
+      text-align: center;
+      padding: 40px 20px;
+      background-color: #ffffff;
+    }
 
+    .partners-section h2 {
+      font-size: 28px;
+      margin-bottom: 30px;
+      color: #333;
+    }
+  
+  
+  .partner-card {
+      background-color: #f0f0f0;
+      padding: 20px 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      font-size: 18px;
+      font-weight: bold;
+      color: #333;
+      transition: transform 0.2s ease;
+    }
+    
+     .partners-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }</style>
+  <h2>Our Medical Specialties</h2>
+  <div class="partners-list">
+    <div class="partner-card">Surgeon</div>
+    <div class="partner-card">Anaesthetist</div>
+    <div class="partner-card">Gynaecologist</div>
+    <div class="partner-card">Cardiologist</div>
+    <div class="partner-card">Radiologist</div>
+    <div class="partner-card">Physician</div>
+    <div class="partner-card">Diagnostic Center</div>
+  </div>
+</section>
   <!-- <section class="partners">
     <div class="container">
       <div class="row">
