--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ https://templatemo.com/tm-574-mexant
                   <h2><em>Medicuslegal Services</em> provide <br>Best <em>Seamless </em> experience</h2>
                   <div class="div-dec"></div>
                   <p>MedicusLegal Services provides a seamless, dependable experience tailored for medical professionals.
-We ensure smooth handling of medico-legal matters, so you can focus on patient care with confidence.
-</p>
+                      We ensure smooth handling of medico-legal matters, so you can focus on patient care with confidence.
+                  </p>
                   <div class="buttons">
                     <div class="green-button">
                       <a href="#">About Us</a>
@@ -647,7 +647,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <div class="col-lg-5 mb-3 mb-lg-0">
         <p style="margin: 0;">
           MedicusLegal Services Pvt Ltd<br>
-          Address- Shop no B-69 anpurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          Address- Shop no B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
           <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
             <i class="fas fa-phone-alt"></i> 8299869572
           </a>
