--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo" >
-                          <img src="assets\images\Medicuslegal_logo.jpg" style="height: 80px; width: auto;" alt="Medicuslegal_logo">
+                          <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
                           
                       </a>
                       <!-- <h4 style="color: #af3131; font-size: 30px; padding-top: 0px;">Medicus Legal</h4> -->
@@ -109,7 +109,7 @@ https://templatemo.com/tm-574-mexant
             <div class="row">
               <div class="col-lg-8">
                 <div class="header-text">
-                  <h2><em>Medicuslegal Services</em> provide <br>Best <em>Seamless </em> experience</h2>
+                  <h2 style="font-size: 36px;"><em>Medicuslegal Services</em> provide <br>Best <em>Seamless </em> experience</h2>
                   <div class="div-dec"></div>
                   <p>MedicusLegal Services provides a seamless, dependable experience tailored for medical professionals.
                       We ensure smooth handling of medico-legal matters, so you can focus on patient care with confidence.
@@ -219,7 +219,7 @@ Because protecting your profession today means preserving your legacy for tomorr
   <div class="about-image">
     <img src="assets\images\8777961.jpg" alt="About Us">
   </div>
-  <div class="about-text">
+  <div id="about" class="about-text">
     <h2>About MedicusLegal Services</h2>
     <p>
       
@@ -291,27 +291,27 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
     </div>
   </section>
 
-  <!-- <section class="simple-cta">
+  <section class="simple-cta">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
-          <h4>Business <em>Solutions</em> and <strong>Crypto</strong> Investments</h4>
+          <h4>Download <em>Medicuslegal Services</em> <strong>Broucher</strong></h4>
         </div>
         <div class="col-lg-7">
           <div class="buttons">
             <div class="green-button">
-              <a href="#">Discover More</a>
+              <a href="#">Download Brochure </a>
             </div>
             <div class="orange-button">
-              <a href="#">Contact Us</a>
+              <a href="#">Call Us</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <section class="about-us" id="about">
+  <!-- <section class="about-us" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -451,7 +451,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="calculator">
     <div class="container">
@@ -464,7 +464,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-5">
           <div class="section-heading">
             <h6>Your Freedom</h6>
-            <h4>Get a Financial Plan</h4>
+            <h4>Get a Touch!</h4>
           </div>
           <form id="calculate" action="" method="get">
             <div class="row">
@@ -482,16 +482,16 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <label for="subject">Subject</label>
+                  <label for="subject">Message</label>
                   <input type="subject" name="subject" id="subject" placeholder="" autocomplete="on" >
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <label for="chooseOption" class="form-label">Your Reason</label>
+                  <label for="chooseOption" class="form-label">Your are</label>
                   <select name="Category" class="form-select" aria-label="Default select example" id="chooseOption" onchange="this.form.click()">
                       <option selected>Choose an Option</option>
-                      <option type="checkbox" name="option1" value="Online Banking">Doctors</option>
+                      <option type="checkbox" name="option1" value="Online Banking">Doctor</option>
                       <option value="Financial Control">Medical Professionals</option>
                       <option value="Yearly Profit">Diagnostic Center</option>
                       <!-- <option value="Crypto Investment">Crypto Investment</option> -->
@@ -516,7 +516,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
             <h6>Testimonials</h6>
-            <h4>What They Say</h4>
+            <h4>What Our Members Say</h4>
           </div>
         </div>
         <div class="col-lg-10 offset-lg-1">
@@ -536,7 +536,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
               <h4> Dr. Rajesh Iyer</h4>
               <span>Orthopedic Surgeon</span>
               <div class="right-image">
-                <img src="assets/images/testimonials-01.jpg" alt="">
+                <img src="assets/images/testimonials-00.png" alt="">
               </div>
             </div>
             <div class="item">
@@ -637,26 +637,32 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
-  <img src="assets\images\Medicuslegal_logo.jpg" alt="MedicusLegal Logo" style="max-width: 150px;">
-  <p style="margin-top: 10px; font-style: italic; font-size: 14px; color: #e0d2d2;">
-    Protect your Profession<br>Preserve your legacy
-  </p>
+  <img src="assets\images\Medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 150px;">
+  <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
+    Doctor's Security<br>Our Priority 
+  </h4>
 </div>
 
       <!-- Address & Contact -->
       <div class="col-lg-5 mb-3 mb-lg-0">
-        <p style="margin: 0;">
+        <p style="margin: 0; font-size: larger;">
           MedicusLegal Services Pvt Ltd<br>
-          Address- Shop no B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <strong>Address</strong> - B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <br>
+          <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
+            <i class="fas fa-phone-alt"></i> 0522 461 2326
+          </a><br>
           <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
             <i class="fas fa-phone-alt"></i> 8299869572
-          </a>
+          </a><br><br>
+          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
         </p>
       </div>
 
       <!-- Social Media -->
       <div class="col-lg-4">
         <p>Follow us:</p>
+        <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more." class="me-3" style="color: #e0dcdc;"><i class="fa-solid fa-envelope"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-twitter"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-linkedin-in"></i></a>
