--- a/contact-us.html
+++ b/contact-us.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets\images\Medicuslegal_logo.jpg" style="height: 80px; width: auto;" alt="Medicuslegal_logo">
+                          <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal_logo">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -114,6 +114,7 @@ https://templatemo.com/tm-574-mexant
               <div class="info-item">
                 <i class="fa fa-phone"></i>
                 <h4>Phone Number</h4>
+                <a href="tel:05224612326">0522 461 2326</a><br>
                 <a href="tel:8299869572">8299869572</a>
 
               </div>
@@ -218,31 +219,37 @@ https://templatemo.com/tm-574-mexant
     </div>
   </section> -->
 
-  <footer >
+<footer >
   <div class="container">
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
-  <img src="assets\images\Medicuslegal_logo.jpg" alt="MedicusLegal Logo" style="max-width: 150px;">
-  <p style="margin-top: 10px; font-style: italic; font-size: 14px; color: #e0d2d2;">
-    Protect your Profession<br>Preserve your legacy
-  </p>
+  <img src="assets\images\Medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 150px;">
+  <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
+    Doctor's Security<br>Our Priority 
+  </h4>
 </div>
 
       <!-- Address & Contact -->
       <div class="col-lg-5 mb-3 mb-lg-0">
-        <p style="margin: 0;">
+        <p style="margin: 0; font-size: larger;">
           MedicusLegal Services Pvt Ltd<br>
-          Address- Shop no B-69 anpurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <strong>Address</strong> - B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <br>
+          <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
+            <i class="fas fa-phone-alt"></i> 0522 461 2326
+          </a><br>
           <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
             <i class="fas fa-phone-alt"></i> 8299869572
-          </a>
+          </a><br><br>
+          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
         </p>
       </div>
 
       <!-- Social Media -->
       <div class="col-lg-4">
         <p>Follow us:</p>
+        <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more." class="me-3" style="color: #e0dcdc;"><i class="fa-solid fa-envelope"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-twitter"></i></a>
         <a href="#" class="me-3" style="color: #e0dcdc;"><i class="fab fa-linkedin-in"></i></a>
