--- a/index.html
+++ b/index.html
@@ -647,13 +647,19 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <div class="col-lg-5 mb-3 mb-lg-0">
         <p style="margin: 0; font-size: larger;">
           MedicusLegal Services Pvt Ltd<br>
-          <strong>Address</strong> - B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <strong>Address</strong> - UGF-69 BN-B Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
           <br>
           <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
-            <i class="fas fa-phone-alt"></i> 0522 461 2326
+            <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+<lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
+</lord-icon>
+            </i> 0522 461 2326
           </a><br>
           <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
-            <i class="fas fa-phone-alt"></i> 8299869572
+            <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+<lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
+</lord-icon>
+             8299869572
           </a><br><br>
           <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
         </p>
