--- a/about-us.html
+++ b/about-us.html
@@ -9,10 +9,15 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Mexant HTML5 Template - About page</title>
+    <title>Medicuslegal Services - About page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io\apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io\favicon-16x16.png">
+    <link rel="manifest" href="favicon_io\site.webmanifest">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -41,7 +46,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/logo.png" alt="">
+                          <img src="assets/images/medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -91,22 +96,23 @@ https://templatemo.com/tm-574-mexant
       <div class="row">
         <div class="col-lg-6">
           <div class="left-image">
-            <img src="assets/images/about-left-image.jpg" alt="">
+            <img src="assets/images/doctor-secure.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center">
           <div class="accordions is-first-expanded">
             <article class="accordion">
               <div class="accordion-head">
-                  <span>Mexant Financial Planning</span>
+                  <span>Medicuslegal Services Mission</span>
                   <span class="icon">
                       <i class="icon fa fa-chevron-right"></i>
                   </span>
               </div>
               <div class="accordion-body">
                   <div class="content">
-                      <p>You will see a bunch of free CSS templates when you search on Google. TemplateMo website is probably the best one because it is 100% free. 
-                      <br><br>We do not ask you anything in return. You are free to use our templates for any purpose.</p>
+                      <p>"Our mission is to safeguard and support the healthcare community by offering trusted medico-legal guidance, broad protection solutions, and dedicated legal representation—so that every medical professional can work with assurance, safety, and peace of mind."
+
+</p>
                   </div>
               </div>
           </article>
@@ -255,8 +261,12 @@ https://templatemo.com/tm-574-mexant
       <div class="row">
         <div class="col-lg-12">
           <p>Copyright © 2022 Mexant Co., Ltd. All Rights Reserved. 
-          
-          <br>Designed by <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <span>
+<a href="tel:01424444130" style="color: white;"><script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+<lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
+</lord-icon> 01424 444130</a>
+</span>
+          <br>Designed by <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Harsh</a></p>
         </div>
       </div>
     </div>
