--- a/index.html
+++ b/index.html
@@ -637,9 +637,10 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
-  <img src="assets\images\Medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 150px;">
+        <!-- <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services"> -->
+  <img src="assets\images\medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 170px;">
   <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
-    Doctor's Security<br>Our Priority 
+    Doctor's Safety<br>Our Priority 
   </h4>
 </div>
 
@@ -680,7 +681,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <div class="col-lg-12 text-center">
         <p style="margin-bottom: 0;">
           © 2025 MedicusLegal Services Pvt Ltd. All Rights Reserved. <br>
-          Built by <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">Harsh</a>
+          Built by <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Harsh</a>
         </p>
       </div>
     </div>
