--- a/about-us.html
+++ b/about-us.html
@@ -118,7 +118,7 @@ https://templatemo.com/tm-574-mexant
           </article>
           <article class="accordion">
             <div class="accordion-head">
-                <span>Mexant Crypto Investing</span>
+                <span>Why to choose us</span>
                 <span class="icon">
                     <i class="icon fa fa-chevron-right"></i>
                 </span>
@@ -260,7 +260,7 @@ https://templatemo.com/tm-574-mexant
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2022 Mexant Co., Ltd. All Rights Reserved. 
+          <p>Copyright © 2025 MedicusLegal Services, Pvt. Ltd. All Rights Reserved. 
           <span>
 <a href="tel:01424444130" style="color: white;"><script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
 <lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
