--- a/contact-us.html
+++ b/contact-us.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal_logo">
+                          <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" style="height: 83px; width: auto;" alt="Medicuslegal Services">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -229,7 +229,7 @@ https://templatemo.com/tm-574-mexant
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
-  <img src="assets\images\Medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 150px;">
+  <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal_Services Logo" >
   <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
     Doctor's Security<br>Our Priority 
   </h4>
@@ -242,12 +242,34 @@ https://templatemo.com/tm-574-mexant
           <strong>Address</strong> - B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
           <br>
           <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
-            <i class="fas fa-phone-alt"></i> 0522 461 2326
+            <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+<lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
+</lord-icon>
+            </i> 0522 461 2326
           </a><br>
-          <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
-            <i class="fas fa-phone-alt"></i> 8299869572
-          </a><br><br>
-          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
+          <a href="tel:8299869572" style="text-decoration: none; color:#0eaf9c;">
+            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+<lord-icon
+    src="https://cdn.lordicon.com/edecmgef.json"
+     trigger="loop" delay="3000"
+    trigger="hover"
+    state="hover-draw"
+    style="width:32px;height:32px">
+</lord-icon>
+            <!-- <i class="fa-brands  fa-whatsapp"></i> -->
+              8299869572
+          </a><br>
+          
+          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">
+            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+              <lord-icon
+                  src="https://cdn.lordicon.com/vpbspaec.json"
+                  trigger="loop"
+                  delay="3000"
+                  state="in-assembly"
+                  colors="primary:#e4e4e4,secondary:#08a88a"
+                  style="width:38px;height:38px">
+              </lord-icon>   info@medicuslegal.com</a>
         </p>
       </div>
 
@@ -266,7 +288,7 @@ https://templatemo.com/tm-574-mexant
       <div class="col-lg-12 text-center">
         <p style="margin-bottom: 0;">
           © 2025 MedicusLegal Services Pvt Ltd. All Rights Reserved. <br>
-          Built by <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">Harsh</a>
+          Built by <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Harsh</a>
         </p>
       </div>
     </div>
