--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo" >
-                          <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
+                          <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
                           
                       </a>
                       <!-- <h4 style="color: #af3131; font-size: 30px; padding-top: 0px;">Medicus Legal</h4> -->
@@ -245,16 +245,34 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <div class="row">
         <div class="col-lg-6">
           <div class="service-item">
+            <i class="fas fa-archway"></i>
+            <h4> Full Legal Representation
+
+</h4>
+            <p>All Court Levels →  Legal
+ services from Lower Courts up to the Supreme Court
+ of India with Pan India Coverage</p>
+          </div>
+        </div>
+        <!-- <div class="col-lg-6">
+          <div class="service-item">
             <i class="fas fa-gavel"></i>
             <h4>Legal Representation</h4>
             <p>Experienced legal experts to defend you in medico-legal cases.</p>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-shield"></i>
             <h4>Medical Indemnity Insurance</h4>
             <p>Coverage for legal claims, compensation, and court proceedings.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="service-item">
+            <i class="fas fa-people-arrows"></i>
+            <h4>Team of Experts</h4>
+            <p>Consultation with Leading Legal Professionals,Access to senior, experienced legal minds in medico-legal domain.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -267,24 +285,34 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-suitcase"></i>
-            <h4>Total Cashless Claims</h4>
-            <p>Hassle-free, cashless settlement of claims.</p>
+            <h4>Total Hassle-free Claims</h4>
+            <p>Easy settlement of compensation or claims handled
+                               by the insurance provider. </p>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div class="service-item">
-            <i class="fas fa-archway"></i>
-            <h4>Court Case Management
-
-</h4>
-            <p>End-to-end handling of summons, FIRs, legal notices, and medico-legal disputes.</p>
-          </div>
-        </div>
+        
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-globe"></i>
             <h4>Nationwide Coverage</h4>
-            <p>If you have any idea or suggestion about new templates, feel free to let us know.</p>
+            <p>Pan India Coverage</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="service-item">
+            <i class="fas fa-list"></i>
+            <h4>Complete Case Management</h4>
+            <p>End-to-end handling of
+ medico-legal cases, including →  Documentation, Legal
+ strategy, Representation.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="service-item">
+            <i class="fas fa-folder-plus"></i>
+            <h4>Extended Legal Assistance </h4>
+            <p> Legal assistance outside subscription on all types of
+               legal acts relating to the protection and promotion of public health.</p>
           </div>
         </div>
       </div>
@@ -638,9 +666,9 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
         <!-- <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services"> -->
-  <img src="assets\images\medicus-logo-2025.png" alt="MedicusLegal Logo" style="max-width: 170px;">
-  <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
-    Doctor's Safety<br>Our Priority 
+  <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal Logo" >
+  <h4 style="margin-left: 20px; margin-top: 10px; font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  color: #e0d2d2;">
+    Doctor's Safety Our Priority 
   </h4>
 </div>
 
@@ -656,13 +684,28 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
 </lord-icon>
             </i> 0522 461 2326
           </a><br>
-          <a href="tel:8299869572" style="text-decoration: none; color: #007bff;">
-            <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
-<lord-icon src="https://cdn.lordicon.com/ltxkhbfa.json" trigger="loop" delay="3000" colors="primary:#ffffff,secondary:#ffffff" stroke="100" style="width:32px;height:32px">
+          <a href="tel:8299869572" style="text-decoration: none; color:#0eaf9c;">
+            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+<lord-icon
+    src="https://cdn.lordicon.com/edecmgef.json"
+     trigger="loop" delay="3000"
+    trigger="hover"
+    state="hover-draw"
+    style="width:32px;height:32px">
 </lord-icon>
-             8299869572
-          </a><br><br>
-          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know%20more.">info@medicuslegal.com</a>
+            <!-- <i class="fa-brands  fa-whatsapp"></i> -->
+              8299869572
+          </a><br>
+          <a href="mailto:info@medicuslegal.com?subject=Hello&body=I%20would%20like%20to%20know.">
+            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+<lord-icon
+    src="https://cdn.lordicon.com/vpbspaec.json"
+    trigger="loop"
+    delay="3000"
+    state="hover-draw"
+    colors="primary:#e4e4e4,secondary:#08a88a"
+    style="width:38px;height:38px">
+</lord-icon> info@medicuslegal.com</a>
         </p>
       </div>
 
