--- a/index.html
+++ b/index.html
@@ -302,17 +302,17 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
           <div class="service-item">
             <i class="fas fa-list"></i>
             <h4>Complete Case Management</h4>
-            <p>End-to-end handling of
+            <div><p>End-to-end handling of
  medico-legal cases, including →  Documentation, Legal
- strategy, Representation.</p>
+ strategy, Representation.</p></div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-folder-plus"></i>
             <h4>Extended Legal Assistance </h4>
-            <p> Legal assistance outside subscription on all types of
-               legal acts relating to the protection and promotion of public health.</p>
+           <p> Legal assistance outside subscription on all types of
+               legal acts relating to the protection and promotion of public health.</p> 
           </div>
         </div>
       </div>
