--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-574-mexant
               <div class="col-lg-8">
                 <div class="header-text">
                   <h2><em>Medicuslegal</em>  <br>Services <em></em></h2>
-                  <div class="div-dec"></div>
+                  <!-- <div class="div-dec"></div> -->
                   <p>Medicuslegal Services Pvt Ltd, is a Risk management company, that provide medical indemnity to Doctors, Hospitlas and Diagnosistic centers across India.</p>
                   <div class="buttons">
                     <!-- <div class="green-button">
@@ -110,7 +110,7 @@ https://templatemo.com/tm-574-mexant
               <div class="col-lg-8">
                 <div class="header-text">
                   <h2 style="font-size: 36px;"><em>Medicuslegal Services</em> provide <br>Best <em>Seamless </em> experience</h2>
-                  <div class="div-dec"></div>
+                  <!-- <div class="div-dec"></div> -->
                   <p>MedicusLegal Services provides a seamless, dependable experience tailored for medical professionals.
                       We ensure smooth handling of medico-legal matters, so you can focus on patient care with confidence.
                   </p>
@@ -135,7 +135,7 @@ https://templatemo.com/tm-574-mexant
               <div class="col-lg-8">
                 <div class="header-text">
                   <h2>Protect your <em>Profession</em><br>Preserve your <em>legacy</em></h2>
-                  <div class="div-dec"></div>
+                  <!-- <div class="div-dec"></div> -->
                   <p>Safeguard your medical practice with trusted legal protection.
 Because protecting your profession today means preserving your legacy for tomorrow.
 </p>
@@ -328,7 +328,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-7">
           <div class="buttons">
             <div class="green-button">
-              <a href="#">Download Brochure </a>
+              <a href="https://drive.google.com/file/d/1_swfYToK5MWvc5XXMEI9fJPY5AUbFtcp/view?usp=drive_link">Download Brochure </a>
             </div>
             <div class="orange-button">
               <a href="#">Call Us</a>
@@ -338,7 +338,51 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       </div>
     </div>
   </section>
+  <section class="top-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="left-image">
+            <img src="assets/images/doctor-secure.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 align-self-center">
+          <div class="accordions is-first-expanded">
+            <article class="accordion">
+              <div class="accordion-head">
+                  <span>Medicuslegal Services Mission</span>
+                  <span class="icon">
+                      <i class="icon fa fa-chevron-right"></i>
+                  </span>
+              </div>
+              <div class="accordion-body">
+                  <div class="content">
+                      <p>"Our mission is to safeguard and support the healthcare community by offering trusted medico-legal guidance, broad protection solutions, and dedicated legal representation—so that every medical professional can work with assurance, safety, and peace of mind."
 
+</p>
+                  </div>
+              </div>
+          </article>
+          <article class="accordion">
+            <div class="accordion-head">
+                <span>Why to choose us</span>
+                <span class="icon">
+                    <i class="icon fa fa-chevron-right"></i>
+                </span>
+            </div>
+            <div class="accordion-body">
+                <div class="content">
+                    <p>
+                    At MedicusLegal Services, we specialize in protecting the rights and professional integrity of healthcare providers. With 24/7 availability, expert legal counsel across all levels of the judiciary—from district forums to the Supreme Court—and deep understanding of medico-legal intricacies, we offer unmatched legal support tailored to the medical profession. Our team of seasoned advocates and medico-legal experts ensures not only representation but also proactive guidance, risk coverage, and end-to-end case management. Whether you're facing allegations of negligence, regulatory action, or civil/criminal proceedings, MedicusLegal is your trusted partner in navigating the complex legal landscape with confidence and security.
+                    Let me know if you'd like a shorter version or one tailored to a more marketing or empathetic tone.</p>
+                </div>
+            </div>
+          </article>
+          
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- <section class="about-us" id="about">
     <div class="container">
       <div class="row">
@@ -486,7 +530,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       <div class="row">
         <div class="col-lg-7">
           <div class="left-image">
-            <img src="assets/images/calculator-image.png" alt="">
+            <img src="assets/images/calculator-image.png" alt="mediucslegal_photo">
           </div>
         </div>
         <div class="col-lg-5">
