--- a/index.html
+++ b/index.html
@@ -625,7 +625,8 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
       </div>
     </div>
   </section>
-<section class="partners-section">
+  <section></section>
+<!-- <section class="partners-section">
   <style>
      .partners-section {
       text-align: center;
@@ -667,7 +668,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
     <div class="partner-card">Physician</div>
     <div class="partner-card">Diagnostic Center</div>
   </div>
-</section>
+</section> -->
   <!-- <section class="partners">
     <div class="container">
       <div class="row">
