--- a/contact-us.html
+++ b/contact-us.html
@@ -231,7 +231,7 @@ https://templatemo.com/tm-574-mexant
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
   <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal_Services Logo" >
   <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
-    Doctor's Security<br>Our Priority 
+    "Doctor's Safety <br>Our Priority" 
   </h4>
 </div>
 
